[gd_scene load_steps=2 format=3 uid="uid://cpmguwaxnse6o"]

[ext_resource type="Script" path="res://scenes/replace_menu.gd" id="1_acs21"]

[node name="ReplaceMenu" type="PanelContainer"]
custom_minimum_size = Vector2(360, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.5
offset_right = 202.5
offset_bottom = 101.0
grow_horizontal = 2
script = ExtResource("1_acs21")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Find"

[node name="Find" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Replace to"

[node name="ReplaceTo" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"
flat = true

[node name="ReplaceButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Replace"
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReplaceButton" to="." method="_on_replace_button_pressed"]
